5.2.0 -> 5.2.1:
    - proyvind: filetriggers: don't pass filename as argument to scripts,
	(all) filenames are passed through stdin already.
    - afb: permit building with js-1.7.0 (the only released version)
    - proyvind: add %distepoch back to provideversion, leave legacy
	compatibility for adopters to care about.
    - proyvind: fix assert fail with Mandriva filetriggers in case of
	installing src.rpm with no triggers queue. (from David Smid/Unity Linux)
    - proyvind: Change log level to debug level for memory leaks reported.
    - proyvind: Mandriva: log install/remove of packages to syslog.
    - proyvind: undo previous revert of checkfiles behaviour which broke build
	of many packages.
    - permit RPMTAG_FILECONTEXTS addition to be disabled.
    - rpm.org: Avoid adding Lua sources/patches twice when recursing.
    - proyvind: make sure to expand %buildroot from main package.
    - proyvind: rpmevr: make rpmEVRparse() work with missing values.
    - proyvind: rpm46compat: Implement RPM 4.6 API wrapper providing ~seamless
	API compatibility for the function wrappers provided. :)
    - proyvind: python: start on implementing proper regression tests.
    - proyvind: js: fix internal build on Linux.
    - proyvind: filetriggers: fix missing file suffix for scripts. (from unity linux).
    - proyvind: rpm4compat: add wrappers for renamed rpmdb*->rpmmi* functions.
    - proyvind: python: add te.D() to return element distepoch.
    - proyvind: python: handle None values in labelCompare() again.
    - proyvind: python: handle DISTEPOCH in labelCompare().
    - jbj: python: fix: missing changelog in repo-md can segfault (David Smid).

5.2b1 -> 5.2.0:
    - rse: fix building under RPM_VENDOR_OPENPKG/switch-from-susr-to-musr-on-srpm-install

5.2a4 -> 5.2b1:
    - jbj: revert checkfiles behavior to last known good (rpm-5.1.9).
    - jbj: rpmfc: reduce the amount of debugging noise with lots of files.
    - jbj: selinux: fix: disabler bit toggle sense was inverted.